# dp832-multitool

./: .gitignore  ARCHITECTURE.rst  CHANNEL_MEASUREMENT_FIX.md  Cargo.toml  DEVELOPMENT_SUMMARY.md  DOCUMENTATION_MIGRATION.rst  DOCUMENTATION_UPDATE_SUMMARY.txt  FINAL_STATUS_V2.md  FIX_STATUS.md  Makefile  PROJECT_STATUS.md  QUICK_START.md  QUICK_START.rst  README.md  README.rst  REGRESSION_FIX.md  REMOTE_CONTROL.rst  RESTRUCTURE_SUMMARY.rst  SCPI_COMMAND_FIX.md  SUMMARY.md  VOLTAGE_GRAPH_FIX.md  conf.py  config.toml  index.rst
doc/: ARCHITECTURE.rst  BUILDING_DOCS.rst  CHANNEL_FIX_SUMMARY.md  CHANNEL_SWITCH_FIX.rst  COMMAND_ERROR_FIX_V2.md  DEVELOPMENT_SUMMARY.md  DEVELOPMENT_SUMMARY.rst  MIGRATION.rst  PROJECT_STATUS.rst  REMOTE_CONTROL.rst  REMOTE_CONTROL_IMPROVEMENTS.rst  index.rst
examples/: README.md  README.rst  bench.toml  chemistry_comparison.toml  development.toml  quick_reference.sh  single_channel.toml  three_channels.toml
profiles/: README.md  README.rst  lead_acid_6v.json  lead_marcus.json  lifepo4.json  lifepo4_3s.json  liion_18650.json  lipo_1s.json  nimh_aa.json
screenshots/: .gitkeep  README.rst  TODO.rst  capture.sh
src/: common.rs  lib.rs  main.rs  scpi.rs  ui.rs
src/battery_sim/: config.rs  mod.rs  model.rs  ui.rs
src/remote_control/: config.rs  controller.rs  mod.rs  ui.rs
