[package]
name = "dp832_battery_sim"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[[bin]]
name = "battery-sim"
path = "src/bin/battery-sim.rs"

[[bin]]
name = "remote-control"
path = "src/bin/remote-control.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
csv = "1.3"
dirs-next = "2.0"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

